# biped-evolve

./: CMakeLists.txt  MCNS_README  Makefile  README.md  SConstruct  alps.h  alps.ne  biped-mut.ne  biped.h  biped_alps.ne  bipedpy.i  calc_champ.py  calc_champ_biped.py  calc_evol.cpp  challenge_maze.txt  class.ne  classgenes  easier.txt  easier_list.txt  easier_maze.txt  easier_maze_list.txt  easygarbage.txt  easygarbage_list.txt  entropy.py  experiments.h  gene.cpp  genome.h  graph.h  hard_res.txt  harder.txt  harder_list.txt  hardgarbage.txt  hardgarbage_list.txt  hardgarbage_seed.txt  hardgarbage_slist.txt  main.cpp  make.sh  maze.ne  mazeApp.cpp  mazeApp.h  (+34 more)
classifier/: convert.py  read_data.cpp
convert/: convert.py
include/: biped.h  biped_py.h  datarec.h  experiments.h  gene.h  maze.h  mazeApp.h  mazeDlg.h  network.h  nnode.h  population_state.h
modularity/: compute_modularity.cpp
nuke/: mass_excess.csv  nuclear.asc  process.py  process2.py  rms.py
src/: biped_stuff.cpp  experiments.cpp  genome.cpp  histogram.cpp  main.cpp  neatmain.cpp  network.cpp  noveltyexp.cpp  organism.cpp  population.cpp  trait.cpp
